# ctrl_eqip

./: .gitignore  Cargo.toml  README.md  build_examples.bat  calibrate.rs  check_error.txt  package_sdk.bat
ctrl_eqip_sdk/include/: ctrl_eqip.h
ctrl_eqip_sdk/lib/: ctrl_eqip.dll.lib
esp32/: PROTOCOL_SPEC.md
examples/: main_loop.rs
src/: ffi.rs  lib.rs
src/engine/: camera.rs  detector.rs  engine.rs  mod.rs  processing.rs
src/logic/: distance.rs  fusion.rs  mod.rs  presence.rs
src/protocol/: codec.rs  messages.rs  mod.rs
src/transport/: mod.rs  serial.rs  wifi.rs
tests/: engine.rs  logic.rs  protocol.rs
tests/engine/: processing.rs
tests/logic/: distance.rs  fusion.rs  presence.rs
tests/protocol/: codec.rs  messages.rs
